# ClashOfCodePractice

./: .gitignore  README.md
c/: clash.c  get-all-multi-solution-function-names.lua  inline_assembly.c  multi-solution.c  print_water_steps.c  read_all.c
cpp/: CMakeLists.txt  CMakePresets.json  Invoke-Cmake.ps1  clash.cpp
csharp/: GetDotnetPowershellDll.ps1  Program.cs  clash.cs  powershell_in_csharp.cs
dart/: clash.dart  print_first_n_digits_of_pi.dart
fsharp/: Program.fs  String_to_ASCII_average.fs  StripVowelsAndPrintNullIfEmpty.fs  fsharp.sln
javascript/: clash.js  replace_odd_and_even_numbers_with_words.js  reverse_map_numbers.js
lua/: clash.lua  clash_luafun.lua  dna_math.lua  foobar_fizz_buzz_similar.lua  letter_leapfrog.lua  luafun.lua  luafun.luac  map_range.lua  mapping_distance_calculations.lua  minutes_to_formatted_time.lua  multi-solution.lua  place_letter_in_the_middle_of_stars.lua  print_chars_from_first_and_second_input_chars.lua  short_luafun.lua  snake_case_to_camel.lua  string_indexing.lua  strip_vowels_and_print_null_if_empty.lua
python/: clash.py  multi-solution.py
visual_basic/: clash.vb
